Solving contrast issues from #4 recommendation | Tested on 3 contrast tool, target AA spec on full solution

--- a/style.css
+++ b/style.css
@@ -90,11 +90,6 @@ a:hover {
     right: 0;
 }
 
-.texture-paper::before {
-    background: url("img/texture-paper.png");
-    background-size: 280px 280px;
-}
-
 .b-parallax {
     background-attachment: fixed;
 }
@@ -651,7 +646,7 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757!important;
+    color: #3f3f3f!important;
 }
 
 .container {
@@ -752,11 +747,6 @@ h4 {
     box-shadow: 0px 4px 9px rgba(0, 0, 0, 0.3);
 }
 
-.black-background {
-    background-color: rgba(165, 147, 99, 0.7);
-    padding: 40px 40px 40px 40px;
-}
-
 .bold-link {
     font-weight: 900;
     text-decoration: underline!important;
@@ -780,15 +770,11 @@ h4 {
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF!important;
+    color: #3f3f3f !important;
 }
 
 .btn-atomic-tangerine:hover {
     background: #c27956!important;
-    color: #FFFFFF!important;
-}
-
-.ltc-white {
     color: #FFFFFF!important;
 }
 
@@ -811,10 +797,6 @@ h4 {
 
 .bg-dots-bg {
     background-image: url("img/dots-bg.png");
-}
-
-.bg-lines-h2-bg {
-    background-image: url("img/lines-h2-bg.png");
 }
 
 .bg-banniere {
@@ -1039,4 +1021,46 @@ h4 {
     .bloc-mob-center-text {
         text-align: center;
     }
+}
+
+/*CUSTOM MODIFICATIONS*/
+.main-title {
+    background-color: #3f3f3f;
+    border-radius: 15px;
+    margin-top: 10px;
+    padding: 10px;
+}
+
+#bloc-8 p, .icon-md {
+    color: #3f3f3f!important;
+}
+
+.black-background {
+    background-color: rgba(248, 147, 99, 1);
+    padding: 10px;
+    border-radius: 15px;
+}
+@media (min-width: 768px) {
+   .black-background{
+       padding: 40px;
+   }
+}
+
+.black-background h2 {
+    line-height: initial;
+    color:#3f3f3f!important;
+}
+
+#bloc-5-cta h2 {
+    background-color: #3f3f3f;
+    border-radius: 15px;
+    padding: 10px;
+}
+
+.ltc-white {
+    color: #333333!important;
+}
+
+.tc-black {
+    color: #3f3f3f;
 }
